--- a/AspMVCECommerce/Views/Account/RegisterRole.cshtml
+++ b/AspMVCECommerce/Views/Account/RegisterRole.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_SellerLayout.cshtml";
 }
 <!-- BREADCRUMB -->
-<div id="breadcrumb" class="section" style="display: flex;">
+<div id="breadcrumb" class="section breadcrumbx" style="display: flex;">
     <div class="container">
 
         <div class="row pull-left" style="width: 230px;">
