--- a/AspMVCECommerce/Views/Manage/ChangePassword.cshtml
+++ b/AspMVCECommerce/Views/Manage/ChangePassword.cshtml
@@ -6,8 +6,8 @@
 
 
 <!-- BREADCRUMB -->
-<div id="breadcrumb" class="section" style="display: flex;">
-    <div class="container" >
+<div id="breadcrumb" class="section breadcrumbx" style="display: flex;">
+    <div class="container">
 
         <div class="row pull-left" style="width: 230px;">
             <div class="col-md-12">
@@ -27,11 +27,10 @@
             <div class="col-md-12">
                 <ul class="breadcrumb-tree">
                     <li><a href="~/Home/Index" title="Home">Home</a></li>
-                    <li><a href="~/Products/Index" title="Products">Products</a></li>
                     <li>   <a href="/Manage" title="Manage">Manage Account</a></li>
                     <li class="active">Change Password</li>
 
-                 
+
                 </ul>
 
 
@@ -54,40 +53,44 @@
 <div class="section">
     <!-- container -->
     <div class="container">
-        <h2>@ViewBag.Title.</h2>
+        <div class="row">
+            <div class="col-md-8">
+                <h2>@ViewBag.Title.</h2>
 
-        @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-        {
-            @Html.AntiForgeryToken()
-            <h4>Change Password Form</h4>
-            <hr />
-            @Html.ValidationSummary("", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(m => m.OldPassword, new { @class = "form-controlx" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(m => m.NewPassword, new { @class = "form-controlx" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-controlx" })
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Change password" class="btnx btn-defaultx"  style="height: 40px;width:150px;"/>
-                </div>
-            </div>
-        }
+                @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <h4>Change Password Form</h4>
+                    <hr />
+                    @Html.ValidationSummary("", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-4 control-label" })
+                        <div class="col-md-6">
+                            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-controlx" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-4 control-label" })
+                        <div class="col-md-6">
+                            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-controlx" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-4 control-label" })
+                        <div class="col-md-6">
+                            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-controlx" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-4 col-md-6">
+                            <input type="submit" value="Change password" class="btnx btn-defaultx" style="height: 40px;width:150px;" />
+                        </div>
+                    </div>
+                }
 
-    </div>
+            </div>
+        </div>
+   </div>
 </div>
 
 
