--- a/AspMVCECommerce/Views/Manage/Index.cshtml
+++ b/AspMVCECommerce/Views/Manage/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <!-- BREADCRUMB -->
-<div id="breadcrumb" class="section" style="display: flex;">
+<div id="breadcrumb" class="section breadcrumbx" style="display: flex;">
     <div class="container">
 
         <div class="row pull-left" style="width: 230px;">
@@ -26,7 +26,6 @@
             <div class="col-md-12">
                 <ul class="breadcrumb-tree">
                     <li><a href="~/Home/Index" title="Home">Home</a></li>
-                    <li><a href="~/Products/Index" title="Products">Products</a></li>
                     <li class="active">Manage Account</li>
                 </ul>
 
