--- a/AspMVCECommerce/Views/Account/Login.cshtml
+++ b/AspMVCECommerce/Views/Account/Login.cshtml
@@ -23,20 +23,20 @@
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
                             @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                            <div class="col-md-10">
+                            <div class="col-md-7">
                                 @Html.TextBoxFor(m => m.Email, new { @class = "form-controlx" })
                                 @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                            <div class="col-md-10">
+                            <div class="col-md-7">
                                 @Html.PasswordFor(m => m.Password, new { @class = "form-controlx" })
                                 @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-md-offset-2 col-md-10" style="padding-left: 35px;">
+                            <div class="col-md-offset-2 col-md-7" style="padding-left: 35px;">
                                 <div class="checkbox">
                                     @Html.CheckBoxFor(m => m.RememberMe)
                                     @Html.LabelFor(m => m.RememberMe, new { @class="remembermelabel" })
@@ -44,8 +44,8 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" value="Log in" class="btnx btn-defaultx"  style="height: 40px;width:150px;" />
+                            <div class="col-md-offset-2 col-md-7">
+                                <input type="submit" value="Log in" class="btnx btn-default"  style="height: 40px;width:150px;" />
                             </div>
                         </div>
                         <p>
