--- a/AspMVCECommerce/Views/Products/Index.cshtml
+++ b/AspMVCECommerce/Views/Products/Index.cshtml
@@ -12,7 +12,7 @@
 
 
 <!-- BREADCRUMB -->
-<div id="breadcrumb" class="section" style="display: flex;">
+<div id="breadcrumb" class="section breadcrumbx" style="display: flex;">
     <div class="container">
 
         <div class="row pull-left" style="width: 230px;">
@@ -91,9 +91,12 @@
         <th>
             Category
         </th>
-        <th>
+        <th style="width:150px;">
             @Html.ActionLink("Name", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter }, htmlAttributes: new { @class = "table-sorter" })
             @*@Html.DisplayNameFor(model => model.Name)*@
+        </th>
+        <th>
+            Brand
         </th>
         <th style="width:430px;">
             Description
@@ -124,84 +127,87 @@
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td style="width:180px;height:180px;" class="td-image">
-                @if (item.Images.Count > 0)
+<tr>
+    <td style="width:180px;height:180px;" class="td-image">
+        @if (item.Images.Count > 0)
+        {
+            <a href="#" class="d-block mb-4">
+                @{var itemImages = item.Images.ToList(); }
+                @foreach (var itemImage in itemImages)
                 {
-                    <a href="#" class="d-block mb-4">
-                        @{var itemImages = item.Images.ToList(); }
-                        @foreach (var itemImage in itemImages)
-                        {
-                            if (itemImage.Default)
-                            {
-                                <img class="imgthumbnail"  src="@Url.Content(itemImage.ImagePath)" alt="@itemImage.Title">
-                                break;
-                            }
-                        }
-
-                    </a>
-                }
-            </td>
-
-            <td>
-                @Html.DisplayFor(modelItem => item.Category.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <span class="class-span" title="">
-                    @*@Html.DisplayFor(modelItem => item.Description)*@
-                    @*@Html.TextAreaFor(modelItem => HttpUtility.HtmlDecode(item.Description), new { @class = "form-control", @rows = 4 })*@
-
-                    @Html.Raw(item.Description)
-
-                </span>
-
-            </td>
-            <td>
-                <span class="class-span" title="">
-                    @Html.Raw(item.Details)
-                </span>
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OriginalPrice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DiscountedPrice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Stock)
-            </td>
-            <td>
-                @if (item.PromoSaleOFF > 0)
-                {
-                    if (DateTime.Now >= item.PromoSaleStartDateTime && DateTime.Now <= item.PromoSaleEndDateTime)
+                    if (itemImage.Default)
                     {
-                        
-                        @(double.Parse(Html.DisplayFor(modelItem => item.PromoSaleOFF).ToString()) * 100)<label class="danger">%</label>
-
-                    }
-                    else
-                    {
-                        <del class="product-old-price">@(double.Parse(Html.DisplayFor(modelItem => item.PromoSaleOFF).ToString()) * 100)%</del> <label style="color:red;font-weight:bold">Deactivated</label>
+                        <img class="imgthumbnail" src="@Url.Content(itemImage.ImagePath)" alt="@itemImage.Title">
+                        break;
                     }
                 }
-                else
-                {
-                    @(double.Parse(Html.DisplayFor(modelItem => item.PromoSaleOFF).ToString()) * 100)<label class="danger">%</label>
-                }
+
+            </a>
+        }
+    </td>
+
+    <td>
+        @Html.DisplayFor(modelItem => item.Category.Name)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Name)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Brand.Name)
+    </td>
+    <td>
+        <span class="class-span" title="">
+            @*@Html.DisplayFor(modelItem => item.Description)*@
+            @*@Html.TextAreaFor(modelItem => HttpUtility.HtmlDecode(item.Description), new { @class = "form-control", @rows = 4 })*@
+
+            @Html.Raw(item.Description)
+
+        </span>
+
+    </td>
+    <td>
+        <span class="class-span" title="">
+            @Html.Raw(item.Details)
+        </span>
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.OriginalPrice)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.DiscountedPrice)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Stock)
+    </td>
+    <td>
+        @if (item.PromoSaleOFF > 0)
+        {
+            if (DateTime.Now >= item.PromoSaleStartDateTime && DateTime.Now <= item.PromoSaleEndDateTime)
+            {
+
+                @(double.Parse(Html.DisplayFor(modelItem => item.PromoSaleOFF).ToString()) * 100)<label class="danger">%</label>
+
+            }
+            else
+            {
+                <del class="product-old-price">@(double.Parse(Html.DisplayFor(modelItem => item.PromoSaleOFF).ToString()) * 100)%</del> <label style="color:red;font-weight:bold">Deactivated</label>
+            }
+        }
+        else
+        {
+            @(double.Parse(Html.DisplayFor(modelItem => item.PromoSaleOFF).ToString()) * 100)<label class="danger">%</label>
+        }
 
 
 
 
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ProductId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ProductId }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ProductId })
-            </td>
-        </tr>
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.ProductId }) |
+        @Html.ActionLink("Details", "Details", new { id = item.ProductId }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.ProductId })
+    </td>
+</tr>
     }
 
 </table>
